# CalCIL

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
calcil/: __init__.py  data_utils.py  dataclasses.py  forward.py  loss.py  losses.py  phantom.py  reconstruction.py  signal.py
calcil/physics/: __init__.py  ray_optics.py  wave_optics.py
docs/: conf.py  getting_started.rst  history.rst  index.rst  installation.rst  requirements.txt
docs/source/: calcil.physics.rst  calcil.rst  modules.rst
examples/: demo_deconvolution.ipynb
